Server/MuchToDo/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muchtodo-ingress
  namespace: muchtodo
spec:
  rules:
    - host: muchtodo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muchtodo-service
                port:
                  number: 8080
